syntax = "proto3";
package pb;
option go_package = "github.com/mateuslima90/grpc-go";

message User {
    string id = 1;
    string name = 2;
    string email = 3;
}

service UserService {
    rpc AddUser (User) returns (User);
    rpc GetUser (User) returns (User);
}